Move interface default-method support into the core module
Reflection used to load Java8SupportImpl reflectively from the separate
owner-java8 artifact, falling back to a no-op when absent: default
methods on config interfaces silently stopped working if the dependency
was missing. Since the core requires Java 8, isDefault() now calls
Method.isDefault() directly and invokeDefaultMethod() embeds the
invocation logic (Lookup constructor hack on a Java 8 runtime,
findSpecial on 9+).

The owner-java8 artifact is now empty and deprecated, kept only so
existing dependency declarations keep resolving; its module moved out
of the now-pointless java8 profile into the main module list. Its tests
moved into the core suite, and the addClass() facility of
IsolatedClassLoader, only used to stub Java8SupportImpl, is gone.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>