@@ -11,29 +11,21 @@ package org.aeonbits.owner.util;
 import org.junit.Assume;
 import org.junit.Test;
 
-import javax.tools.FileObject;
-import javax.tools.ForwardingJavaFileManager;
-import javax.tools.JavaCompiler;
-import javax.tools.JavaFileManager;
-import javax.tools.JavaFileObject;
-import javax.tools.SimpleJavaFileObject;
-import javax.tools.ToolProvider;
-import java.io.ByteArrayOutputStream;
-import java.io.OutputStream;
+import java.lang.management.ManagementFactory;
+import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
-import java.net.URI;
+import java.lang.reflect.Proxy;
 
-import static java.util.Arrays.asList;
-import static java.util.Collections.singletonList;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotSame;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.fail;
 
 /**
  * @author Luigi R. Viggiano
+ * @author Matteo Baccan
  */
 public class ReflectionTest {
 
@@ -60,89 +52,91 @@ public class ReflectionTest {
     }
 
     /**
-     * In this module Java8SupportImpl is not on the classpath (it lives in the
-     * owner-java8 module), so the no-op fallback applies and must return null.
+     * Plays the role of a {@code Config} interface proxied by OWNER: it exposes both an
+     * abstract method and a default method.
      */
-    @Test
-    public void testInvokeDefaultMethodWithoutJava8Support() throws Throwable {
-        Method method = Runnable.class.getMethod("run");
-        assertNull(Reflection.invokeDefaultMethod(new Object(), method, new Object[0]));
-    }
+    public interface Sample {
+        Integer three();
 
-    public interface WithDefaultMethod {
-        String abstractMethod();
-
-        default String defaultMethod() {
-            return "hello";
+        default Integer sum(Integer a, Integer b) {
+            return a + b;
         }
     }
 
-    /**
-     * Simulates the classpath of the owner-java8 module, where a Java8SupportImpl class is
-     * available: {@link Reflection} must load it reflectively and delegate to it, instead of
-     * using the no-op fallback exercised by the rest of this suite. A minimal stub is compiled
-     * in memory and made visible to an isolated copy of the Reflection class.
-     */
     @Test
-    public void testJava8SupportIsLoadedReflectivelyWhenAvailable() throws Exception {
-        String stubName = "org.aeonbits.owner.util.Java8SupportImpl";
-        IsolatedClassLoader isolated = new IsolatedClassLoader(ReflectionTest.class.getClassLoader());
-        isolated.addClass(stubName, compileInMemory(stubName,
-                "package org.aeonbits.owner.util;\n" +
-                "import java.lang.reflect.Method;\n" +
-                "public class Java8SupportImpl implements Reflection.Java8Support {\n" +
-                "    public boolean isDefault(Method method) { return method.isDefault(); }\n" +
-                "    public Object invokeDefaultMethod(Object proxy, Method method, Object[] args) {\n" +
-                "        return \"invoked \" + method.getName();\n" +
-                "    }\n" +
-                "}\n"));
-
-        Class<?> reflection = Class.forName("org.aeonbits.owner.util.Reflection", true, isolated);
-        assertNotSame(Reflection.class, reflection);
-
-        Method isDefault = reflection.getMethod("isDefault", Method.class);
-        assertTrue((Boolean) isDefault.invoke(null, WithDefaultMethod.class.getMethod("defaultMethod")));
-        assertFalse((Boolean) isDefault.invoke(null, WithDefaultMethod.class.getMethod("abstractMethod")));
-
-        Method invokeDefaultMethod = reflection.getMethod(
-                "invokeDefaultMethod", Object.class, Method.class, Object[].class);
-        assertEquals("invoked defaultMethod", invokeDefaultMethod.invoke(
-                null, new Object(), WithDefaultMethod.class.getMethod("defaultMethod"), new Object[0]));
+    public void isDefaultShouldReturnTrueForInterfaceDefaultMethods() throws Exception {
+        assertTrue(Reflection.isDefault(sumMethod()));
     }
 
-    private static byte[] compileInMemory(String className, final String sourceCode) {
-        JavaCompiler compiler = ToolProvider.getSystemJavaCompiler();
-        Assume.assumeTrue("tests are running on a JRE without the java compiler", compiler != null);
+    @Test
+    public void isDefaultShouldReturnFalseForAbstractInterfaceMethods() throws Exception {
+        assertFalse(Reflection.isDefault(Sample.class.getMethod("three")));
+    }
 
-        JavaFileObject source = new SimpleJavaFileObject(
-                URI.create("string:///" + className.replace('.', '/') + ".java"), JavaFileObject.Kind.SOURCE) {
-            @Override
-            public CharSequence getCharContent(boolean ignoreEncodingErrors) {
-                return sourceCode;
+    @Test
+    public void invokeDefaultMethodShouldInvokeDefaultImplementationBypassingTheProxyHandler() throws Throwable {
+        // findSpecial() accepts a special caller different from the lookup class only since
+        // Java 9; on a real Java 8 runtime this branch is never taken by production code.
+        Assume.assumeFalse(isJava8Runtime());
+
+        Object result = Reflection.invokeDefaultMethod(newProxy(), sumMethod(), new Object[] {2, 3}, false);
+
+        assertEquals(Integer.valueOf(5), result);
+    }
+
+    @Test
+    public void invokeDefaultMethodShouldUseTheLookupConstructorHackWhenRunningOnJava8() throws Throwable {
+        if (isJava8Runtime()) {
+            // On a real Java 8 runtime the private Lookup(Class, int) constructor is usable
+            // and the default method implementation gets invoked.
+            Object result = Reflection.invokeDefaultMethod(newProxy(), sumMethod(), new Object[] {3, 4}, true);
+            assertEquals(Integer.valueOf(7), result);
+        } else {
+            try {
+                Reflection.invokeDefaultMethod(newProxy(), sumMethod(), new Object[] {3, 4}, true);
+                fail("the MethodHandles.Lookup constructor hack is unusable on Java 9+, a failure was expected");
+            } catch (IllegalAccessException expected) {
+                // JDK 9-13: the constructor is still there, but a Lookup created with
+                // PRIVATE-only modes is not allowed to unreflectSpecial() a public member.
+            } catch (NullPointerException expected) {
+                // JDK 14+: the Lookup(Class, int) constructor has been removed, so
+                // Reflection.Lookup.lookupConstructor() returns null.
+            } catch (ExceptionInInitializerError expected) {
+                // JDK 9-15 with --illegal-access=deny: setAccessible(true) fails while
+                // initializing the nested Lookup class.
+            } catch (NoClassDefFoundError expected) {
+                // Any subsequent access after the nested Lookup class failed to initialize.
             }
-        };
+        }
+    }
 
-        final ByteArrayOutputStream compiled = new ByteArrayOutputStream();
-        JavaFileManager fileManager = new ForwardingJavaFileManager<JavaFileManager>(
-                compiler.getStandardFileManager(null, null, null)) {
-            @Override
-            public JavaFileObject getJavaFileForOutput(
-                    Location location, String name, JavaFileObject.Kind kind, FileObject sibling) {
-                return new SimpleJavaFileObject(URI.create("mem:///" + name + ".class"), kind) {
-                    @Override
-                    public OutputStream openOutputStream() {
-                        return compiled;
+    private static Method sumMethod() throws NoSuchMethodException {
+        return Sample.class.getMethod("sum", Integer.class, Integer.class);
+    }
+
+    /**
+     * Returns a {@link Proxy} implementing {@link Sample} whose handler always fails: default
+     * methods must be dispatched to the interface implementation via {@code invokespecial}
+     * semantics, never through the proxy handler (that would loop forever in OWNER).
+     */
+    private static Sample newProxy() {
+        return (Sample) Proxy.newProxyInstance(
+                ReflectionTest.class.getClassLoader(),
+                new Class<?>[] {Sample.class},
+                new InvocationHandler() {
+                    public Object invoke(Object proxy, Method method, Object[] args) {
+                        throw new UnsupportedOperationException(
+                                "default methods must not be dispatched to the proxy handler: " + method);
                     }
-                };
-            }
-        };
+                });
+    }
 
-        // the classpath makes the Reflection.Java8Support interface visible to the compiler
-        Boolean success = compiler.getTask(null, fileManager, null,
-                asList("-classpath", System.getProperty("java.class.path")), null,
-                singletonList(source)).call();
-        assertTrue("compilation of the stub failed", success);
-        return compiled.toByteArray();
+    /**
+     * Tells whether the tests are running on a real Java 8 runtime, using the very same check
+     * performed by {@link Reflection} at class initialization.
+     */
+    private static boolean isJava8Runtime() {
+        return ManagementFactory.getRuntimeMXBean().getSpecVersion().startsWith("1.8");
     }
 
 }
